:bug: work -> fix overflow

--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -2,7 +2,6 @@
 	position: relative;
 	height: 100vh;
 	width: 100%;
-	overflow: hidden;
 	background-color: var(--color_typo);
 	transform: translateY(100vh);
 	animation: intro_slide 0.6s ease-out forwards;
